--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "phpunit/phpunit": "^7.4"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
@@ -16,8 +17,7 @@
         "fzaninotto/faker": "^1.4",
         "laravel/homestead": "^7.19",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "nunomaduro/collision": "^2.0"
     },
     "autoload": {
         "classmap": [
