--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
+    "/components.css": "/components.css",
     "/js/bundle.js": "/js/bundle.js",
     "/js/utils.js": "/js/utils.js"
 }
